Fix login screen cropping

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -53,7 +53,7 @@ html, body, .container {
 }
 
 #container {
-    overflow: hidden;
+    overflow: auto;
     display: flex;
     align-items: stretch;
     flex-direction: column;
